exports[`test CaseStudyForm renders 1`] = `
<div>
  <form
    style={
      Object {
        "display": "none",
      }
    }
    tabIndex="-1" />
  <div
    className="layout">
    <header>
      <h1>
        Add
         case study
      </h1>
      <p>
        Show the range of skills and experience you can provide by completing the form below.
      </p>
    </header>
    <aside
      className="sidebar">
      <nav
        className="local-nav nav-collapse">
        <ul>
          <li>
            <a
              className={undefined}
              href="/"
              onClick={[Function]}
              role={undefined}>
              Add case study
            </a>
          </li>
          <li>
            <a
              className={undefined}
              href="/reference"
              onClick={[Function]}
              role={undefined}>
              Add reference
            </a>
          </li>
        </ul>
      </nav>
    </aside>
    <article
      className="content-main"
      role="main">
      <span />
      <form
        action={undefined}
        id="casestudy__create"
        method="post"
        onReset={[Function]}
        onSubmit={[Function]}>
        <div
          className="field">
          <label
            className="question-heading"
            htmlFor="title">
            Give your case study a title
          </label>
          <input
            aria-describedby={undefined}
            className=""
            id="title"
            name="title"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="" />
        </div>
        <div
          className="field">
          <label
            className="question-heading"
            htmlFor="client">
            Who was the client?
          </label>
          <input
            aria-describedby={undefined}
            className=""
            id="client"
            name="client"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="" />
        </div>
        <div
          className="field">
          <label
            className="question-heading"
            htmlFor="timeframe">
            What was the time frame?
          </label>
          <p
            className="hint"
            id="timeframe-hint">
            For example,  January 2016 — June 2016
          </p>
          <input
            aria-describedby="timeframe-hint"
            className=""
            id="timeframe"
            name="timeframe"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="" />
        </div>
        <div
          className="field">
          <label
            htmlFor="opportunity">
            Outline the problem or opportunity
          </label>
          <p
            className="hint"
            id="opportunity-hint">
            Describe the project goal and any relevant background information.
          </p>
          <div>
            <textarea
              aria-describedby="opportunity-hint"
              className=""
              defaultValue=""
              id="opportunity"
              name="opportunity"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]} />
            <span
              className="word-count-counter">
              200 words remaining
            </span>
          </div>
        </div>
        <div
          className="field">
          <label
            htmlFor="approach">
            Describe your approach
          </label>
          <p
            className="hint"
            id="approach-hint">
            How did your capabilities and methods contribute to achieving the project goals?
          </p>
          <div>
            <textarea
              aria-describedby="approach-hint"
              className=""
              defaultValue=""
              id="approach"
              name="approach"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]} />
            <span
              className="word-count-counter">
              200 words remaining
            </span>
          </div>
        </div>
        <div
          className="field">
          <label
            htmlFor="outcome">
            What was the outcome?
          </label>
          <p
            className="hint"
            id="outcome-hint">
            List the key achievements of this project.
          </p>
          <div>
            <div
              className="list-entry row">
              <div
                className="col-xs-12 col-sm-9">
                <label
                  className="text-box-number-label"
                  htmlFor="outcome">
                  1
                  .
                </label>
                <input
                  aria-describedby="outcome-hint"
                  className="text-box "
                  defaultValue=""
                  id="outcome"
                  name="outcome[]"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text" />
              </div>
            </div>
            <div
              className="list-entry row">
              <div
                className="col-xs-12 col-sm-9">
                <label
                  className="text-box-number-label"
                  htmlFor="outcome-1">
                  2
                  .
                </label>
                <input
                  aria-describedby="outcome-hint"
                  className="text-box "
                  defaultValue=""
                  id="outcome-1"
                  name="outcome[]"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text" />
              </div>
              <button
                className="button-secondary col-xs-12 col-sm-3"
                onClick={[Function]}
                type="button">
                remove 
                <span
                  className="visuallyhidden">
                  number 
                  2
                </span>
              </button>
            </div>
            <button
              className="button-secondary"
              onClick={[Function]}
              type="button">
              Add another row
            </button>
          </div>
        </div>
        <div
          className="field">
          <label
            htmlFor="projectLinks">
            Project links
          </label>
          <p
            className="hint"
            id="projectLinks-hint">
            Link to any supporting material for your case study. This can include a case study on your  website, case study video or the live project.
          </p>
          <div>
            <div
              className="list-entry row">
              <div
                className="col-xs-12 col-sm-9">
                <label
                  className="text-box-number-label"
                  htmlFor="projectLinks">
                  1
                  .
                </label>
                <input
                  aria-describedby="projectLinks-hint"
                  className="text-box "
                  defaultValue=""
                  id="projectLinks"
                  name="projectLinks[]"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text" />
              </div>
            </div>
            <div
              className="list-entry row">
              <div
                className="col-xs-12 col-sm-9">
                <label
                  className="text-box-number-label"
                  htmlFor="projectLinks-1">
                  2
                  .
                </label>
                <input
                  aria-describedby="projectLinks-hint"
                  className="text-box "
                  defaultValue=""
                  id="projectLinks-1"
                  name="projectLinks[]"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text" />
              </div>
              <button
                className="button-secondary col-xs-12 col-sm-3"
                onClick={[Function]}
                type="button">
                remove 
                <span
                  className="visuallyhidden">
                  number 
                  2
                </span>
              </button>
            </div>
            <button
              className="button-secondary"
              onClick={[Function]}
              type="button">
              Add another row
            </button>
          </div>
        </div>
        <input
          onClick={[Function]}
          role="button"
          type="submit"
          value="Save & Continue" />
      </form>
    </article>
  </div>
</div>
`;

exports[`test CaseStudyForm renders with form_options 1`] = `
<div>
  <form
    style={
      Object {
        "display": "none",
      }
    }
    tabIndex="-1" />
  <div
    className="layout">
    <header>
      <h1>
        Add
         case study
      </h1>
      <p>
        Show the range of skills and experience you can provide by completing the form below.
      </p>
    </header>
    <aside
      className="sidebar">
      <nav
        className="local-nav nav-collapse">
        <ul>
          <li>
            <a
              className={undefined}
              href="/"
              onClick={[Function]}
              role={undefined}>
              Add case study
            </a>
          </li>
          <li>
            <a
              className={undefined}
              href="/reference"
              onClick={[Function]}
              role={undefined}>
              Add reference
            </a>
          </li>
        </ul>
      </nav>
    </aside>
    <article
      className="content-main"
      role="main">
      <span />
      <form
        action="/foo/bar"
        id="casestudy__create"
        method="post"
        onReset={[Function]}
        onSubmit={[Function]}>
        <input
          id="csrf_token"
          name="csrf_token"
          type="hidden"
          value="sometoken" />
        <div
          className="field">
          <label
            className="question-heading"
            htmlFor="title">
            Give your case study a title
          </label>
          <input
            aria-describedby={undefined}
            className=""
            id="title"
            name="title"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="" />
        </div>
        <div
          className="field">
          <label
            className="question-heading"
            htmlFor="client">
            Who was the client?
          </label>
          <input
            aria-describedby={undefined}
            className=""
            id="client"
            name="client"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="" />
        </div>
        <div
          className="field">
          <label
            className="question-heading"
            htmlFor="timeframe">
            What was the time frame?
          </label>
          <p
            className="hint"
            id="timeframe-hint">
            For example,  January 2016 — June 2016
          </p>
          <input
            aria-describedby="timeframe-hint"
            className=""
            id="timeframe"
            name="timeframe"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="" />
        </div>
        <div
          className="field">
          <label
            htmlFor="opportunity">
            Outline the problem or opportunity
          </label>
          <p
            className="hint"
            id="opportunity-hint">
            Describe the project goal and any relevant background information.
          </p>
          <div>
            <textarea
              aria-describedby="opportunity-hint"
              className=""
              defaultValue=""
              id="opportunity"
              name="opportunity"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]} />
            <span
              className="word-count-counter">
              200 words remaining
            </span>
          </div>
        </div>
        <div
          className="field">
          <label
            htmlFor="approach">
            Describe your approach
          </label>
          <p
            className="hint"
            id="approach-hint">
            How did your capabilities and methods contribute to achieving the project goals?
          </p>
          <div>
            <textarea
              aria-describedby="approach-hint"
              className=""
              defaultValue=""
              id="approach"
              name="approach"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]} />
            <span
              className="word-count-counter">
              200 words remaining
            </span>
          </div>
        </div>
        <div
          className="field">
          <label
            htmlFor="outcome">
            What was the outcome?
          </label>
          <p
            className="hint"
            id="outcome-hint">
            List the key achievements of this project.
          </p>
          <div>
            <div
              className="list-entry row">
              <div
                className="col-xs-12 col-sm-9">
                <label
                  className="text-box-number-label"
                  htmlFor="outcome">
                  1
                  .
                </label>
                <input
                  aria-describedby="outcome-hint"
                  className="text-box "
                  defaultValue=""
                  id="outcome"
                  name="outcome[]"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text" />
              </div>
            </div>
            <div
              className="list-entry row">
              <div
                className="col-xs-12 col-sm-9">
                <label
                  className="text-box-number-label"
                  htmlFor="outcome-1">
                  2
                  .
                </label>
                <input
                  aria-describedby="outcome-hint"
                  className="text-box "
                  defaultValue=""
                  id="outcome-1"
                  name="outcome[]"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text" />
              </div>
              <button
                className="button-secondary col-xs-12 col-sm-3"
                onClick={[Function]}
                type="button">
                remove 
                <span
                  className="visuallyhidden">
                  number 
                  2
                </span>
              </button>
            </div>
            <button
              className="button-secondary"
              onClick={[Function]}
              type="button">
              Add another row
            </button>
          </div>
        </div>
        <div
          className="field">
          <label
            htmlFor="projectLinks">
            Project links
          </label>
          <p
            className="hint"
            id="projectLinks-hint">
            Link to any supporting material for your case study. This can include a case study on your  website, case study video or the live project.
          </p>
          <div>
            <div
              className="list-entry row">
              <div
                className="col-xs-12 col-sm-9">
                <label
                  className="text-box-number-label"
                  htmlFor="projectLinks">
                  1
                  .
                </label>
                <input
                  aria-describedby="projectLinks-hint"
                  className="text-box "
                  defaultValue=""
                  id="projectLinks"
                  name="projectLinks[]"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text" />
              </div>
            </div>
            <div
              className="list-entry row">
              <div
                className="col-xs-12 col-sm-9">
                <label
                  className="text-box-number-label"
                  htmlFor="projectLinks-1">
                  2
                  .
                </label>
                <input
                  aria-describedby="projectLinks-hint"
                  className="text-box "
                  defaultValue=""
                  id="projectLinks-1"
                  name="projectLinks[]"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text" />
              </div>
              <button
                className="button-secondary col-xs-12 col-sm-3"
                onClick={[Function]}
                type="button">
                remove 
                <span
                  className="visuallyhidden">
                  number 
                  2
                </span>
              </button>
            </div>
            <button
              className="button-secondary"
              onClick={[Function]}
              type="button">
              Add another row
            </button>
          </div>
        </div>
        <input
          onClick={[Function]}
          role="button"
          type="submit"
          value="Save & Continue" />
      </form>
    </article>
  </div>
</div>
`;

exports[`test CaseStudyForm renders with populated fields 1`] = `
<div>
  <form
    style={
      Object {
        "display": "none",
      }
    }
    tabIndex="-1" />
  <div
    className="layout">
    <header>
      <h1>
        Add
         case study
      </h1>
      <p>
        Show the range of skills and experience you can provide by completing the form below.
      </p>
    </header>
    <aside
      className="sidebar">
      <nav
        className="local-nav nav-collapse">
        <ul>
          <li>
            <a
              className={undefined}
              href="/"
              onClick={[Function]}
              role={undefined}>
              Add case study
            </a>
          </li>
          <li>
            <a
              className={undefined}
              href="/reference"
              onClick={[Function]}
              role={undefined}>
              Add reference
            </a>
          </li>
        </ul>
      </nav>
    </aside>
    <article
      className="content-main"
      role="main">
      <span />
      <form
        action="https://httpbin.org/post"
        id="casestudy__create"
        method="post"
        onReset={[Function]}
        onSubmit={[Function]}>
        <div
          className="field">
          <label
            className="question-heading"
            htmlFor="title">
            Give your case study a title
          </label>
          <input
            aria-describedby={undefined}
            className=""
            id="title"
            name="title"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="" />
        </div>
        <div
          className="field">
          <label
            className="question-heading"
            htmlFor="client">
            Who was the client?
          </label>
          <input
            aria-describedby={undefined}
            className=""
            id="client"
            name="client"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="The Client Name" />
        </div>
        <div
          className="field">
          <label
            className="question-heading"
            htmlFor="timeframe">
            What was the time frame?
          </label>
          <p
            className="hint"
            id="timeframe-hint">
            For example,  January 2016 — June 2016
          </p>
          <input
            aria-describedby="timeframe-hint"
            className=""
            id="timeframe"
            name="timeframe"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onKeyPress={[Function]}
            type="text"
            value="January 2016 — June 2016" />
        </div>
        <div
          className="field">
          <label
            htmlFor="opportunity">
            Outline the problem or opportunity
          </label>
          <p
            className="hint"
            id="opportunity-hint">
            Describe the project goal and any relevant background information.
          </p>
          <div>
            <textarea
              aria-describedby="opportunity-hint"
              className=""
              defaultValue="The opportunity"
              id="opportunity"
              name="opportunity"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]} />
            <span
              className="word-count-counter">
              198 words remaining
            </span>
          </div>
        </div>
        <div
          className="field">
          <label
            htmlFor="approach">
            Describe your approach
          </label>
          <p
            className="hint"
            id="approach-hint">
            How did your capabilities and methods contribute to achieving the project goals?
          </p>
          <div>
            <textarea
              aria-describedby="approach-hint"
              className=""
              defaultValue="The approach"
              id="approach"
              name="approach"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]} />
            <span
              className="word-count-counter">
              198 words remaining
            </span>
          </div>
        </div>
        <div
          className="field">
          <label
            htmlFor="outcome">
            What was the outcome?
          </label>
          <p
            className="hint"
            id="outcome-hint">
            List the key achievements of this project.
          </p>
          <div>
            <div
              className="list-entry row">
              <div
                className="col-xs-12 col-sm-9">
                <label
                  className="text-box-number-label"
                  htmlFor="outcome">
                  1
                  .
                </label>
                <input
                  aria-describedby="outcome-hint"
                  className="text-box "
                  defaultValue="Outcome 1"
                  id="outcome"
                  name="outcome[]"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text" />
              </div>
            </div>
            <div
              className="list-entry row">
              <div
                className="col-xs-12 col-sm-9">
                <label
                  className="text-box-number-label"
                  htmlFor="outcome-1">
                  2
                  .
                </label>
                <input
                  aria-describedby="outcome-hint"
                  className="text-box "
                  defaultValue="Outcome 2"
                  id="outcome-1"
                  name="outcome[]"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text" />
              </div>
              <button
                className="button-secondary col-xs-12 col-sm-3"
                onClick={[Function]}
                type="button">
                remove 
                <span
                  className="visuallyhidden">
                  number 
                  2
                </span>
              </button>
            </div>
            <button
              className="button-secondary"
              onClick={[Function]}
              type="button">
              Add another row
            </button>
          </div>
        </div>
        <div
          className="field">
          <label
            htmlFor="projectLinks">
            Project links
          </label>
          <p
            className="hint"
            id="projectLinks-hint">
            Link to any supporting material for your case study. This can include a case study on your  website, case study video or the live project.
          </p>
          <div>
            <div
              className="list-entry row">
              <div
                className="col-xs-12 col-sm-9">
                <label
                  className="text-box-number-label"
                  htmlFor="projectLinks">
                  1
                  .
                </label>
                <input
                  aria-describedby="projectLinks-hint"
                  className="text-box "
                  defaultValue=""
                  id="projectLinks"
                  name="projectLinks[]"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text" />
              </div>
            </div>
            <div
              className="list-entry row">
              <div
                className="col-xs-12 col-sm-9">
                <label
                  className="text-box-number-label"
                  htmlFor="projectLinks-1">
                  2
                  .
                </label>
                <input
                  aria-describedby="projectLinks-hint"
                  className="text-box "
                  defaultValue=""
                  id="projectLinks-1"
                  name="projectLinks[]"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="text" />
              </div>
              <button
                className="button-secondary col-xs-12 col-sm-3"
                onClick={[Function]}
                type="button">
                remove 
                <span
                  className="visuallyhidden">
                  number 
                  2
                </span>
              </button>
            </div>
            <button
              className="button-secondary"
              onClick={[Function]}
              type="button">
              Add another row
            </button>
          </div>
        </div>
        <input
          onClick={[Function]}
          role="button"
          type="submit"
          value="Save & Continue" />
      </form>
    </article>
  </div>
</div>
`;
